[package]
name = "rclone"
version = "0.1.1"
authors = ["k-nasa <htilcs1115@gmail.com>"]
repository = "https://github.com/k-nasa/rclone"
license-file="LICENSE"
readme="README.md"
description='Tools for git clone'
edition = "2018"

[dependencies]
clap = "2.32.0"
colored = "1.6.1"
dirs = "1.0.4"
failure = "0.1.3"
regex = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.10"
